--- a/programs/marketplace/Cargo.toml
+++ b/programs/marketplace/Cargo.toml
@@ -17,3 +17,9 @@ default = []
 
 [dependencies]
 anchor-lang = "0.27.0"
+anchor-spl = "0.27.0"
+spl-token = { version = "3.2",  features = ["no-entrypoint"] }
+spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
+metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
+thiserror = "1.0"
+arrayref = "0.3.6"
